<resources>
    <string name="app_name">MyResume</string>
    <string name="about_me">About Me</string>
    <string name="summary">An entry level software engineer with a bachelor\'s degree in computer science. I am proficient in major computer technologies raging from working autonomous servers, operating system, programming, architecture concepts and principles</string>
    <string name="heading2"><![CDATA[Education & Certification]]></string>
    <string name="heading1">Work Experience</string>
    <string name="heading3">Skills</string>
    <string name="heading4">Socials</string>
    <string name="CCT_BULLET">Promoted company projects and campaigns to potential clients. Created reports and data-driven presentations. Attended various lectures and events whiles engaging with other students and Instructors</string>
    <string name="CCT_DATE">2021 May-August</string>
    <string name="CCT_ROLE">Student</string>
    <string name="EDU_1">Bachelor Degree in Computer Science</string>
    <string name="EDU_1_DETAILS">Afe Babalola University - Ekiti, Nigeria - 2022</string>
    <string name="CER_1">Induction into the Council of Computer Professionals Nigeria</string>
    <string name="VOTE_BULLET">Its an online voting app through which voters can vote in ongoing elections created by election Admins. Only verified voters will be bale to vote and candidate can enroll for the election. Built with: Kotlin and Firebase</string>
    <string name="MVVM_BULLET">Its an application with the main intent of incorporating the principles of working with MVVM architecture with its main functionality derived from using certain database information and authentication support Built with: Kotlin, API, Retrofit, Firebase</string>
    <string name="COMPANY">At the company as an ideal candidate i aid in creating technical design and implementation of new products and maintaining of existing products. Various things i can offer range from utilizing source control, continuous integration and unit testing best practices. Below are projects that ive worked on</string>
    <string name="IG_BULLET">Functionality that resembles that of the original instagram but with the main intent of using as a means of exploring various concepts involved with android development. Built with: Java, Firebase</string>
    <string name="CCT" translatable="false">Complete Computers Technology Limited</string>
    <string name="NAME">Hi, I\'m Esetobore Mobile Developer</string>
    <string name="my_work">My Work</string>
    <string name="CCT_NAME" translatable="false">Complete Computers Technology Limited</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="googling">Googling</string>
    <string name="communication">Communication</string>
    <string name="git_amp_github" translatable="false"><![CDATA[Git & Github]]></string>
    <string name="android_studio" translatable="false">Android Studio</string>
    <string name="android_development" translatable="false">Android Development</string>
    <string name="java" translatable="false">Java</string>
    <string name="kotlin" translatable="false">Kotlin</string>
    <string name="projects">Projects</string>
    <string name="voting_app">Voting App</string>
    <string name="freelance_project">Freelance Project</string>
    <string name="side_project">Side Project</string>
    <string name="instagram_clone">Instagram Clone</string>
    <string name="learning_project">Learning Project</string>
    <string name="IGCLONE_BULLET">Functionality that resembles that of the original instagram but with the main intent of using as a means of exploring various concepts involved with android development. Built with: Java, Firebase</string>
    <string name="Free_DATE">2022 July - Present</string>
    <string name="Free_BULLET">Completed Projects on time and under budget for a variety of clients. Proven ability to manage multiple projects simultaneously while meeting deadlines.</string>
    <string name="freelance_mobile_dev" translatable="false">Freelance Mobile Dev</string>
    <string name="explore">Explore</string>
    <string name="EXPLORE_BULLET">Explore is an application that explores all the various countries and various information about them. Built with: Kotlin, API, Retrofit, Glide, Coroutines, MVVM Architecture</string>

</resources>